<resources>
    <string name="app_name">AndroidExpenseManager</string>
    <string name="Login">Login</string>
    <string name="button_save">Save</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="daftar_sekarang">Register Now</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_repassword">Re-Password</string>
    <string name="register_register">Register</string>
    <string name="menu_income">Income</string>
    <string name="menu_expense">Expense</string>
    <string name="menu_newincome">New Income</string>
    <string name="menu_newexpense">New Expense</string>
    <string name="menu_balance">Balance</string>
    <string name="menu_reportExpense">Report Expense</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logouut">Logout</string>
    <string name="income_category">Category</string>
    <string name="income_money">Money</string>
    <string name="income_kurs">Kurs</string>
    <string name="income_time">Time</string>
    <string name="income_hint_time">DD/MM/YYYY</string>
    <string name="income_information">Information</string>
    <string name="setting_currency">Currency</string>
    <string name="setting_budget">Budget</string>
    <string name="submit">Submit</string>

    <string name="user_not_approved">User not approved</string>
    <string name="register_failed">Register Failed</string>
    <string name="add_income_failed">Add Income Failed</string>
    <string name="add_expense_failed">Add Expense Failed</string>
</resources>