<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.anthony.androidexpensemanager.loginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/a" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textWebEmailAddress"
        android:text=""
        android:textSize="@dimen/activity_size_font" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="@dimen/activity_size_font" />/ />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Login"
        android:textSize="@dimen/activity_size_font" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/register_register"
        android:textSize="@dimen/activity_size_font" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:text="@string/forgot_password"
        android:textColor="@color/blue_color"
        android:textSize="@dimen/activity_size_font_forgot" />

</LinearLayout>
