<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnNewIncome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_margin_vertical"
    android:layout_marginEnd="@dimen/activity_margin_horizontal"
    android:layout_marginStart="@dimen/activity_margin_horizontal"
    android:layout_marginTop="@dimen/activity_margin_vertical"
    android:orientation="vertical"
    tools:context="com.anthony.androidexpensemanager.MenuActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_income"
        android:textSize="@dimen/activity_size_font" />

    <TextView
        android:id="@+id/txtIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_expense"
        android:textSize="@dimen/activity_size_font" />

    <TextView
        android:id="@+id/txtExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_balance"
        android:textSize="@dimen/activity_size_font" />

    <TextView
        android:id="@+id/txtBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_newincome" />

        <Button
            android:id="@+id/btnNewExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_newexpense" />
    </LinearLayout>
</LinearLayout>
