<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_margin_vertical"
    android:layout_marginEnd="@dimen/activity_margin_horizontal"
    android:layout_marginStart="@dimen/activity_margin_horizontal"
    android:layout_marginTop="@dimen/activity_margin_vertical"
    android:orientation="vertical"
    tools:context="com.anthony.androidexpensemanager.ExpenseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/income_category" />

            <Spinner
                android:id="@+id/cmbCategory"
                android:layout_width="match_parent"
                android:layout_height="68dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/income_money" />

            <EditText
                android:id="@+id/txtMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/income_money"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/income_information" />

            <EditText
                android:id="@+id/txtInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/income_information"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/income_time" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
