<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_margin_vertical"
    android:layout_marginEnd="@dimen/activity_margin_horizontal"
    android:layout_marginStart="@dimen/activity_margin_horizontal"
    android:layout_marginTop="@dimen/activity_margin_vertical"
    android:orientation="vertical"
    tools:context="com.anthony.androidexpensemanager.SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_currency"
                android:textSize="@dimen/activity_size_font" />

            <Spinner
                android:id="@+id/cmbCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_budget"
                android:textSize="@dimen/activity_size_font" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/setting_budget"
                android:inputType="number"
                android:text=""
                android:textSize="@dimen/activity_size_font" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
